force-app/main/default/objects/Section__c/fields/Section_Contents__c.field-meta.xml
<CustomField>
    <fullName>Section_Contents__c</fullName>
    <description>Which all content will be present in a section</description>
    <label>Section Contents</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chart Graph</fullName>
            </value>
            <value>
                <fullName>Donut Chart</fullName>
            </value>
            <value>
                <fullName>Tiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>