force-app/main/default/objects/Section__c/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <description>Order Place of section</description>
    <label>Section Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>